force-app/src/objects/CTPISA__UBL_Delivery_Tracker__c.object
<CustomObject>
    <description>To track the delivery Status of sent invoices.</description>
    <fields>
        <fullName>CTPISA__Sales_Credit_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Credit Note</label>
        <referenceTo>c2g__codaCreditNote__c</referenceTo>
        <relationshipLabel>UBL Delivery Tracker</relationshipLabel>
        <relationshipName>UBL_Delivery_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__Sales_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>UBL Delivery Tracker</relationshipLabel>
        <relationshipName>UBL_Delivery_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__UBL_Delivery_Status__c</fullName>
        <label>UBL Delivery Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>succeeded</fullName>
                </value>
                <value>
                    <fullName>failed</fullName>
                </value>
                <value>
                    <fullName>no_action_taken</fullName>
                </value>
                <value>
                    <fullName>sent for delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTPISA__UBL_Error_Details__c</fullName>
        <label>UBL Error Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTPISA__UBL_Invoice_GUID__c</fullName>
        <label>UBL Invoice GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>UBL Delivery Tracker</label>
    <listViews>
        <fullName>CTPISA__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UDT-{00000000}</displayFormat>
        <label>UBL Delivery Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UBL Delivery Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>